WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171847
[Win] ImageDiff isn't built since
Bug 168945
https://bugs.webkit.org/show_bug.cgi?id=171847
Summary
[Win] ImageDiff isn't built since Bug 168945
Fujii Hironori
Reported
2017-05-08 22:03:03 PDT
[Win] ImageDiff isn't built since
Bug 168945
AppleWin port layout test fails:
https://build.webkit.org/builders/Apple%20Win%207%20Release%20%28Tests%29/builds/606/steps/layout-test/logs/stdio
> 18:49:10.979 17924 Checking build ... > 18:49:11.010 17924 ImageDiff was not found at WebKitBuild/release/bin32/ImageDiff > 18:49:11.010 17924 Build check failed > 18:49:11.010 17924 Testing completed, Exit status: -1
Attachments
Patch
(2.10 KB, patch)
2017-05-08 22:12 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-05-08 22:12:49 PDT
Created
attachment 309470
[details]
Patch
WebKit Commit Bot
Comment 2
2017-05-09 07:50:57 PDT
Comment on
attachment 309470
[details]
Patch Clearing flags on attachment: 309470 Committed
r216504
: <
http://trac.webkit.org/changeset/216504
>
WebKit Commit Bot
Comment 3
2017-05-09 07:50:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug