[Win] ImageDiff isn't built since Bug 168945 https://bugs.webkit.org/show_bug.cgi?id=171847

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-05-09
Reviewed by Alex Christensen.

* CMakeLists.txt: Add 'ImageDiff' sub-directory to build if WIN32.
* ImageDiff/ImageDiff.cpp: Include some header files to fix compilation errors.
* ImageDiff/PlatformWin.cmake: Define USE_CAIRO if WinCairo port.

Canonical link: https://commits.webkit.org/188774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216504 268f45cc-cd09-0410-ab3c-d52691b4dbfc